--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -1,1 +1,48 @@
-<p>evidence works!</p>
+<div class="cabecalho">
+    <h1 class="mr-3">Relato e Evidências da Solução do Problema</h1>
+    <p>
+        Comente sobre o processo e anexe evidências da solução do problema desta NC
+    </p>
+</div>
+
+<div class="d-flex flex-column flex-lg-row justify-content-between mt-4">
+    <div class="">
+        <p-editor
+                [style]="{ height: '210px' }"
+                [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
+        ></p-editor>
+        <div id="counterEv" class="text-end">0</div>
+    </div>
+
+    <div class="div-attachment">
+        <h1>Anexar relatório de custos</h1>
+        <div
+                class="white-background"
+                *ngIf="true"
+        >
+            <input
+                    type="file"
+                    accept=".pdf"
+                    class="input-attachment"
+            />
+            <i class="pi pi-cloud-upload"></i>
+            <p>
+                Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
+            </p>
+        </div>
+        <div
+                class="white-background-files"
+                *ngIf="false"
+        >
+            <button
+                    type="button"
+                    class="btn btn-light"
+            >
+                <i class="pi pi-replay"></i>
+            </button>
+            <p>
+                {{ "file"}}
+            </p>
+        </div>
+    </div>
+</div>
