--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -1,1 +1,15 @@
-<p>risks works!</p>
+<div class="cabecalho">
+    <h1 class="mr-3">Riscos e Oportunidades</h1>
+    <p>
+        Descreva os riscos e oportunidades observados nesta NC.
+    </p>
+</div>
+
+<div class="mt-4">
+    <p-editor
+            [(ngModel)]="this.sgqServ.step3Text"
+            [style]="{ height: '50vh' }"
+            [modules]="{counter: {container: '#counterRc',unit: 'character'}}"
+    ></p-editor>
+    <div id="counterRc" class="text-end">0</div>
+</div>
