--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -6,7 +6,7 @@
         </p>
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
-        <button class="btn btn-dark ml-3">
+        <button class="btn btn-dark ml-3" (click)="openDialog()">
             Adicionar NC Reincidente
             <i class="bi bi-file-earmark-medical"></i>
         </button>
