front sgq e visualização pdf custos incorridos

--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -46,13 +46,15 @@
                             type="button"
                             icon="bi bi-file-earmark-richtext"
                             class="p-button-secondary p-button-text"
+                            (click)="visualizarDocumento(doc.id, 'pdf')"
                     ></button>
-                    <button
+                    <a
                             pButton
                             type="button"
                             icon="bi bi-download"
                             class="p-button-secondary p-button-text"
-                    ></button>
+                            [href]="'http://localhost:3333/costs/files/download/'+doc.id"
+                    ></a>
                     <button
                             pButton
                             type="button"
