--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -8,7 +8,7 @@
 <div class="d-flex flex-column flex-lg-row justify-content-between mt-4">
     <div class="">
         <p-editor
-                [style]="{ height: '210px' }"
+                [style]="{ height: '210px', width: '700px' }"
                 [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
         ></p-editor>
         <div id="counterEv" class="text-end">0</div>
