--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="card">
-    <p-table [value]="sgqServ.step1 ">
+    <p-table [value]="sgqServ.step1">
         <ng-template pTemplate="header">
             <tr>
                 <th>Número</th>
@@ -53,3 +53,14 @@
         </ng-template>
     </p-table>
 </div>
+
+<p-confirmDialog #cd [style]="{ width: '50vw' }">
+    <ng-template pTemplate="footer">
+        <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+            Não, cancelar
+        </button>
+        <button type="button" class="btn btn-dark" (click)="cd.accept()">
+            Sim, excluir contato
+        </button>
+    </ng-template>
+</p-confirmDialog>
