--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/add-nc-dialog/add-nc-dialog.component.html
@@ -44,7 +44,9 @@
                  'product.name',
                  'product.code',
                  'product.description'
-                  ]">
+                  ]"
+                 [scrollable]="true"
+                 scrollHeight="50vh">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Número</th>
