--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/reoccurrence.component.html
@@ -60,7 +60,7 @@
             Não, cancelar
         </button>
         <button type="button" class="btn btn-dark" (click)="cd.accept()">
-            Sim, excluir contato
+            Sim, desfazer reincidência
         </button>
     </ng-template>
 </p-confirmDialog>
