--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-sgq/nc-info-sgq.component.css
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-info-sgq/nc-info-sgq.component.css
@@ -1,5 +1,6 @@
-
-
+:host /deep/ .p-tabPanel  .p-tabview-nav:hover a {
+    text-decoration: none;
+}
 .content-box {
     width: 100%;
     height: calc(100vh - 310px);
@@ -26,7 +27,4 @@
 .cabecalho p {
     font-size: 15px;
     color: gray;
-}
-:host /deep/ .p-accordion .p-accordion-header:hover a {
-    text-decoration: none;
 }
