--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -9,6 +9,7 @@
     <div class="">
         <p-editor
                 [style]="{ height: '210px', width: '700px' }"
+                [(ngModel)]="sgqServ.step2Text"
                 [modules]="{counter: {container: '#counterEv',unit: 'character'}}"
         ></p-editor>
         <div id="counterEv" class="text-end">0</div>
@@ -18,12 +19,14 @@
         <h1>Anexar relatório de custos</h1>
         <div
                 class="white-background"
-                *ngIf="true"
+                *ngIf="sgqServ.step2File.length == 0"
         >
             <input
                     type="file"
-                    accept=".pdf"
+                    accept=".pdf,image/jpeg,image/png,xlsx,xls"
                     class="input-attachment"
+                    (change)="onUpload($event)"
+                    multiple
             />
             <i class="pi pi-cloud-upload"></i>
             <p>
@@ -32,16 +35,17 @@
         </div>
         <div
                 class="white-background-files"
-                *ngIf="false"
+                *ngIf="sgqServ.step2File.length != 0"
         >
             <button
                     type="button"
+                    (click)="clearFiles()"
                     class="btn btn-light"
             >
                 <i class="pi pi-replay"></i>
             </button>
-            <p>
-                {{ "file"}}
+            <p *ngFor="let files of sgqServ.step2File">
+                {{ files.name }}
             </p>
         </div>
     </div>
