--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -83,9 +83,45 @@
             <div class="d-flex justify-content-between accordion">
                 <p>
                     <i class="pi pi-compass"></i>
+                    Relato e Evidências da Solução do Problema
+                </p>
+                <button class="btn btn-dark red" (click)="goToStepById(1)">
+                    <i class="bi bi-pencil mr-1"></i>
+                    Alterar
+                </button>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="content">
+            <div class="mb-5">
+                <p-editor [ngModel]="this.sgqServ.step2Text" [style]="editorStyle" [readonly]="true">
+                    <ng-template pTemplate="header">
+                    </ng-template>
+                </p-editor>
+            </div>
+            <div class="mt-5 mb-3">
+                <p-carousel
+                        [value]="sgqServ.step2File"
+                        [numVisible]="4"
+                        [numScroll]="4"
+                        [showIndicators]="false"
+
+                >
+                    <ng-template let-file pTemplate="item">
+                        <i class="bi bi-file-earmark fs-1"></i>
+                        <p>{{ file.name }}</p>
+                    </ng-template>
+                </p-carousel>
+            </div>
+        </ng-template>
+    </p-accordionTab>
+    <p-accordionTab [selected]="isAllOpen">
+        <ng-template pTemplate="header">
+            <div class="d-flex justify-content-between accordion">
+                <p>
+                    <i class="pi pi-compass"></i>
                     Riscos e Oportunidades
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(0)">
+                <button class="btn btn-dark red" (click)="goToStepById(2)">
                     <i class="bi bi-pencil mr-1"></i>
                     Alterar
                 </button>
@@ -105,7 +141,7 @@
                     <i class="bi bi-envelope-exclamation"></i>
                     Mudanças
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(0)">
+                <button class="btn btn-dark red" (click)="goToStepById(3)">
                     <i class="bi bi-pencil mr-1"></i>
                     Alterar
                 </button>
@@ -125,7 +161,7 @@
                     <i class="bi bi-envelope"></i>
                     Partes Interessadas
                 </p>
-                <button class="btn btn-dark red" (click)="goToStepById(0)">
+                <button class="btn btn-dark red" (click)="goToStepById(4)">
                     <i class="bi bi-pencil mr-1"></i>
                     Alterar
                 </button>
