--- a/src/app/header/menu/menu.component.css
+++ b/src/app/header/menu/menu.component.css
@@ -1,18 +1,26 @@
+
+
+
+.logo{
+  height: 50px; 
+  width: auto;
+}
+
 .designation {
   font-size: 0.8rem;
   color: white;
 }
 
-.nomeUser {
+.name-user {
   font-size: 1rem;
   color: white;
 }
 
 .avatar {
-  margin-top: 8;
   width: 50;
   height: 50px;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 
@@ -28,11 +36,11 @@
 }
 
 ::ng-deep .p-menubar{
-  background-color: #00344D !important;
+  background-color: rgb(0, 91, 123) !important;
 }
 
 ::ng-deep .p-menuitem {
-  background-color: #00344D !important;
+  background-color: rgb(0, 91, 123) !important;
   margin-left: 10px;
 }
 
