--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,11 +2,14 @@
   <div class="split left">
     <div class="centered-left">
       <h3 class="welcomeText">Boas vindas ao </h3>
-      <h1 class="systemTitle">Sistema Gestor de Não</h1>
-      <h1 class="systemTitle">Conformidades da Electroson</h1>
+      <div style="word-wrap: break-word;">
+        <h1 class="systemTitle">Sistema Gestor de Não</h1>
+        <h1 class="systemTitle">Conformidades da Electroson</h1>
+      </div>
     </div>
   </div>
   <div class="split right">
+    <p-toast></p-toast>
 
     <form *ngIf="!isLoggedIn"
     name="form"
@@ -31,6 +34,9 @@
         <div *ngIf="password.errors['required']">Digite sua senha</div>
       </div>
 
+
+      
+
       <div class="form-group">
         <div
           class="alert alert-danger"
@@ -44,6 +50,7 @@
       <div class="alert alert-success" *ngIf="isLoggedIn">
         Logged in as {{ roles }}.
       </div>
+     
 
       <div class="form-group">
         <label class="loginFormText" for="email">E-mail</label>
