--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -2,7 +2,7 @@
 <div class="header-create-nc">
   <div class="p-0">
     <div class="d-flex">
-      <button type="button" class="btn btn-dark">
+      <button routerLink="/ncs" type="button" class="btn btn-dark">
         <i class="pi pi-home"></i>
         Início
       </button>
